--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -3,8 +3,12 @@
 <head>
 </head>
 <body>
+
     <h1>This shows up on every page</h1>
 
-    {% block content %}{% endblock %}
+    {% block content %}
+
+    {% endblock %}
+
 </body>
 </html>
